--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ToDoDB": "server=localhost;user=root;password=12345678;database=tododb"
+    "ToDoDB": "server=be7s8bagknqyvcd69kvz-mysql.services.clever-cloud.com;user=u1mdlwzfmorieody;password=ylFYzvqNwoL5TloE52gt;database=be7s8bagknqyvcd69kvz"
   }
 }
