--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ToDoDB": "server=be7s8bagknqyvcd69kvz-mysql.services.clever-cloud.com;user=u1mdlwzfmorieody;password=ylFYzvqNwoL5TloE52gt;database=be7s8bagknqyvcd69kvz"
+    "ToDoDB":"Server=be7s8bagknqyvcd69kvz-mysql.services.clever-cloud.com;Port=3306;Database=be7s8bagknqyvcd69kvz;User=u1mdlwzfmorieody;Password=ylFYzvqNwoL5TloE52gt;"
+
+   
   }
 }
