--- a/appsettings.json
+++ b/appsettings.json
@@ -5,8 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "ToDoDB":"Server=be7s8bagknqyvcd69kvz-mysql.services.clever-cloud.com;Port=3306;Database=be7s8bagknqyvcd69kvz;User=u1mdlwzfmorieody;Password=ylFYzvqNwoL5TloE52gt;"  
-  }
+  "AllowedHosts": "*"
 }
