--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+"ConnectionStrings": {
+  "ToDoDB": "Server=b-mysql.services.clever-cloud.com;user=u1mdlwzfmorieody;password=rbeQVS4uErYhenYGmJ64;database=be7s8bagknqyvcd69kvz"
+}
 }
