--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
 "ConnectionStrings": {
-  "ToDoDB": "Server=b-mysql.services.clever-cloud.com;user=u1mdlwzfmorieody;password=rbeQVS4uErYhenYGmJ64;database=be7s8bagknqyvcd69kvz"
+  "ToDoDB": "Server=be7s8bagknqyvcd69kvz-mysql.services.clever-cloud.com;user=u1mdlwzfmorieody;password=rbeQVS4uErYhenYGmJ64;database=be7s8bagknqyvcd69kvz"
 }
 }
